--- a/TungTT_SE04896_VTVGo/app/src/main/res/values/colors.xml
+++ b/TungTT_SE04896_VTVGo/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f00</color>
-    <color name="colorPrimaryDark">#CC0000</color>
-    <color name="colorAccent">#f00</color>
+    <color name="colorPrimary">#D32F2F</color>
+    <color name="colorPrimaryDark">#B71C1C</color>
+    <color name="colorAccent">#F44336</color>
+    <color name="colorText">#fafafa</color>
+    <color name="colorTextShadow">#3c3c3c</color>
 </resources>
